--- a/sites/all/libraries/angular-media-app/app/index.html
+++ b/sites/all/libraries/angular-media-app/app/index.html
@@ -22,7 +22,7 @@
   <div class="thumbnails" ng-class="" ng-controller="thumbnails" ng-init='init({
   apiUrl: "/api/angular-media/",
   fieldName: "field_picture",
-  files: [{"fid":"751","uid":"1","filename":"Screenshot from 2015-02-03 11:11:12.png","uri":"public:\/\/Screenshot from 2015-02-03 11:11:12_2.png","filemime":"image\/png","filesize":"64589","status":"1","timestamp":"1423351943","type":"image","uuid":"f4e26223-d898-4048-b055-771d2137b7c6","field_file_image_alt_text":[],"field_file_image_title_text":[],"rdf_mapping":[],"metadata":{"height":829,"width":958},"alt":null,"title":null,"focal_point":"","width":"958","height":"829","name":"Screenshot from 2015-02-03 11:11:12.png"},{"fid":"752","uid":"1","filename":"Screenshot from 2015-02-03 09:53:36.png","uri":"public:\/\/Screenshot from 2015-02-03 09:53:36_2.png","filemime":"image\/png","filesize":"497451","status":"1","timestamp":"1423351943","type":"image","uuid":"25aee26f-23e2-4e1a-a677-cb82da70417c","field_file_image_alt_text":[],"field_file_image_title_text":[],"rdf_mapping":[],"metadata":{"height":766,"width":677},"alt":null,"title":null,"focal_point":"","width":"677","height":"766","thumbUrl":"http:\/\/liftoff.local\/sites\/liftoff.local\/files\/styles\/thumbnail\/public\/Screenshot%20from%202015-02-03%2009%3A53%3A36_2.png?itok=knelemNJ","name":"Screenshot from 2015-02-03 09:53:36.png"}],
+  files: [{"fid":"751","uid":"1","filename":"Screenshot from 2015-02-03 11:11:12.png","uri":"public:\/\/Screenshot from 2015-02-03 11:11:12_2.png","filemime":"image\/png","filesize":"64589","status":"1","timestamp":"1423351943","type":"image","uuid":"f4e26223-d898-4048-b055-771d2137b7c6","field_file_image_alt_text":[],"field_file_image_title_text":[],"rdf_mapping":[],"metadata":{"height":829,"width":958},"alt":null,"title":null,"focal_point":"","width":"958","height":"829","name":"Screenshot from 2015-02-03 11:11:12.png"},{"fid":"752","uid":"1","filename":"Screenshot from 2015-02-03 09:53:36.png","uri":"public:\/\/Screenshot from 2015-02-03 09:53:36_2.png","filemime":"image\/png","filesize":"497451","status":"1","timestamp":"1423351943","type":"image","uuid":"25aee26f-23e2-4e1a-a677-cb82da70417c","field_file_image_alt_text":[],"field_file_image_title_text":[],"rdf_mapping":[],"metadata":{"height":766,"width":677},"alt":null,"title":null,"focal_point":"","width":"677","height":"766","thumbUrl":"http:\/\/soar-current.local\/sites\/soar-current.local\/files\/styles\/media_thumbnail\/public\/file1_9.jpg?itok=gn_9psnp","name":"Screenshot from 2015-02-03 09:53:36.png"}],
   multiple: 1,
   flickrApiKey: ""
 })'><!-- nv-file-drop="" uploader="uploader"-->
@@ -70,10 +70,10 @@
   <script src="bower_components/infinite-scroll/jquery.infinitescroll.js"></script>
   <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
   <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
+  <script src="bower_components/jcrop/js/jquery.Jcrop.js"></script>
   <script src="bower_components/ngImgCrop/compile/minified/ng-img-crop.js"></script>
   <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
   <script src="bower_components/angular-mocks/angular-mocks.js"></script>
-  <script src="bower_components/jcrop/js/jquery.Jcrop.js"></script>
   <script src="bower_components/ng-jcrop/ng-jcrop.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
