MAking crop work again

--- a/sites/all/libraries/angular-media-app/app/index.html
+++ b/sites/all/libraries/angular-media-app/app/index.html
@@ -77,8 +77,8 @@
   <script src="bower_components/ngImgCrop/compile/minified/ng-img-crop.js"></script>
   <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
   <script src="bower_components/angular-mocks/angular-mocks.js"></script>
-  <script src="bower_components/ng-jcrop/ng-jcrop.js"></script>
   <!-- endbower -->
+  <script src="js/directives/ng-jcrop.js"></script>
   <!-- endbuild -->
   <!-- build:js js/vendor/bootstrap.min.js -->
   <!-- endbuild -->
