--- a/profiles/helm/libraries/ckeditor/samples/index.html
+++ b/profiles/helm/libraries/ckeditor/samples/index.html
@@ -49,6 +49,9 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 <dt><a class="samples" href="plugins/image2/image2.html">New Image plugin</a><span class="new">New!</span></dt>
 <dd>Using the new Image plugin to insert captioned images and adjust their dimensions.</dd>
 
+<dt><a class="samples" href="plugins/autogrow/autogrow.html">AutoGrow plugin</a></dt>
+<dd>Using the AutoGrow plugin in order to make the editor grow to fit the size of its content.</dd>
+
 <dt><a class="samples" href="plugins/wysiwygarea/fullpage.html">Full page support</a></dt>
 <dd>CKEditor inserted with a JavaScript call and used to edit the whole page from &lt;html&gt; to &lt;/html&gt;.</dd>
 </dl>
