making full page responsive

--- a/sites/all/modules/custom/angular_311/js/angular-311/app/index.html
+++ b/sites/all/modules/custom/angular_311/js/angular-311/app/index.html
@@ -67,7 +67,7 @@
   <div ng-if="appPageDisplay == 'all'" class="open-nav">
     <a menu-click="return-false"><i class="fa fa-arrow-circle-o-left"></i> <span>Navigation</span></a>
   </div>
-  <div class="app-slider">
+  <div class="app-slider slider-style-{{appPageDisplay}}">
     <div class="row">
       <div ng-if="appPageDisplay == 'all'" class="col-xs-6 col-sm-12 nav-contain">
         <div menu></div>
