Adding updating map location

--- a/sites/all/modules/custom/helm_civic_map/index.html
+++ b/sites/all/modules/custom/helm_civic_map/index.html
@@ -16,7 +16,7 @@
         ga('create', 'FILLME!', 'auto');
     </script>
   </head>
-  <body class="helm-map-activated">
+  <body >
 
     <nav id="menu-ui" class="menu-ui"></nav>
     <div class="helm-map" id="helm-map" style="
